they would for a local database.

The AceQL Python Client SDK is licensed under the Apache 2.0
License.


AceQL Python Client SDK - Version 5.6 - 28-Nov-2022
----------------------------------------------------

Whats' New:
- The new HealthCheck.get_server_memory_info() API allows
  gathering memory info of the AceQL server running instance.
- AceQL now supports Python 3.11.

Bugs fixed:
- cursor.py: Use List[tuple] instead of list[tuple]
  for Python < 3.8 support.


AceQL Python Client SDK - Version 5.5 - 13-Jun-2022
---------------------------------------------------

Whats' New:
- Display a more detailed error message if an HTTP
  error occurs. (result_analyzer.py)
- Display a more detailed error message if the JSON parser
  can not find the JSON file of a downloaded ResultSet.
  (stream_result_analyzer.py)

Bugs fixed:
- aceql_http_api.py.get_http_status_message():
  was bugged. This has been fixed.

AceQL Python Client SDK - Version 5.4 - 15-Apr-2022
----------------------------------------------------

What's New:
- The new HealthCheck API allows checking the remote server's
  availability & response time. It will be enhanced in future
  versions.


AceQL Python Client SDK - Version 5.3 - 22-Feb-2022
----------------------------------------------------

What's New:
- The new Cursor.execute_server_query method allows
  calling a remote server class that returns directly
  the result of a SELECT.


AceQL Python Client SDK - Version 5.2 - 03-Dec-2021
----------------------------------------------------

What's New:
- Python 3.10 is now supported.
- The new AceQLConnection.get_database_info() API allows to easily
  get all info about the remote database and the remote DBC Driver.


AceQL Python Client SDK - Version 5.1 - 04-Nov-2021
---------------------------------------------------

What's New:
-The ConnectionInfo class includes the new get_creation_datetime()
 method that indicates when the AceQL Connection with the remote
 server was established.

